--- a/MumbaiHacks-client/index.html
+++ b/MumbaiHacks-client/index.html
@@ -15,7 +15,7 @@
   <meta name="apple-mobile-web-app-title" content="UITEMPLATE">
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>UITEMPLATE</title>
+  <title>SHYSHTEM</title>
 </head>
 
 <body>
