--- a/MumbaiHacks-client/index.html
+++ b/MumbaiHacks-client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="UITEMPLATE&mdash; Efficiency Redefined">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/moneyMentor.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="mask-icon" href="/logo.svg" color="#FFFFFF">
   <meta name="theme-color" content="#000000">
